another big update

--- a/frontend/partials/dashboard.html
+++ b/frontend/partials/dashboard.html
@@ -7,7 +7,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"
   />
-  <base href="/" />
+  <!-- <base href="/" /> -->
   <style>
     /* .modal {
       z-index: 10;
@@ -31,19 +31,27 @@
     }
   </style>
 </head>
-<body class="has-navbar-fixed-top" style="background-color: hsl(0, 0%, 96%)">
-  <nav class="navbar is-fixed-top">
-    <div class="container">
-      <div class="navbar-brand">
-        <a href="/" class="navbar-item">
-          <img
-            src="https://raw.githubusercontent.com/sluh-hackclub/diagnosys/master/logo/NEW1.png"
-            style="max-height: 50px"
-          />
-        </a>
+<body style="background-color: hsl(0, 0%, 96%)">
+  <section class="hero has-background-info">
+    <div class="hero-body">
+      <div class="container">
+        <nav class="level">
+          <div class="level-left">
+            <figure class="image">
+              <img
+                src="whiteTransparent.png"
+                alt="virus logo"
+                style="width:75px; length:47.8125px; float:left"
+              />
+            </figure>
+            <h4 class="subtitle is-4 has-text-white">
+              EpTracker
+            </h4>
+          </div>
+        </nav>
       </div>
     </div>
-  </nav>
+  </section>
 
   <div class="section">
     <div class="container">
@@ -79,9 +87,6 @@
                   </th>
                   <th>
                     Country
-                  </th>
-                  <th>
-                    Zip Code
                   </th>
                   <th>
                     Degree of Seperation
