--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -1,5 +1,5 @@
     <div>
-      <section class="hero has-background-info is-medium">
+      <section class="hero has-background-info">
         <div class="hero-body">
           <div class="container">
             <nav class="level">
@@ -18,8 +18,8 @@
               </div>
             </nav>
           </div>
-          <div class="container">
           <br>
+          <div class="container">
             <p class="has-text-white has-text-centered">
             Welcome to the Coronavirus Questionnaire. Please answer these questions to help track the current spread and 
             prevent further spread of the virus.
