--- a/frontend/partials/home.html
+++ b/frontend/partials/home.html
@@ -4,8 +4,42 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"
     />
+    <base href="" />
   </head>
   <body>
+    <section class="hero has-background-info">
+      <div class="hero-body">
+        <div class="container">
+          <nav class="level">
+            <div class="level-left">
+              <figure class="image">
+                <img
+                  src="whiteTransparent.png"
+                  alt="virus logo"
+                  style="width:75px; length:47.8125px; float:left"
+                />
+              </figure>
+              <h4 class="subtitle is-4 has-text-white">
+                EpTracker
+              </h4>
+            </div>
+            <!-- <div class="level-right">
+              <h1 class="title has-text-white">
+                Questionnaire
+              </h1>
+            </div> -->
+          </nav>
+        </div>
+        <!-- <div class="container">
+          <br />
+          <p class="has-text-white has-text-centered">
+            Welcome to the Coronavirus Questionnaire. Please answer these
+            questions to help track the current spread and prevent further
+            spread of the virus.
+          </p>
+        </div> -->
+      </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="box">
