--- a/frontend/partials/locationhistory.html
+++ b/frontend/partials/locationhistory.html
@@ -27,6 +27,9 @@
       #mapid {
         height: 400px;
       }
+      .section {
+        padding: 15px 0 0 0;
+      }
     </style>
   </head>
   <body style="background-color: #f7f7f7;">
