--- a/frontend/partials/patient.html
+++ b/frontend/partials/patient.html
@@ -1,5 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <base href="" />
   <link
     href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
     rel="stylesheet"
@@ -9,7 +10,6 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"
   />
   <link rel="stylesheet" href="main.css" />
-  <base href="/" />
   <style>
     /* .modal {
       z-index: 10;
@@ -39,22 +39,27 @@
     }
   </style>
 </head>
-<body class="has-navbar-fixed-top" style="background-color: hsl(0, 0%, 96%)">
-  <nav class="navbar is-fixed-top">
-    <div class="container">
-      <div class="navbar-brand">
-        <a href="/" class="navbar-item">
-          <!-- <img src="https://raw.githubusercontent.com/sluh-hackclub/diagnosys/master/logo/NEW1.png" style="max-height: 50px"/> -->
-          Logo Goes Here
-        </a>
-      </div>
-      <div class="navbar-menu">
-        <div class="navbar-end">
-          <a class="navbar-item"> </a>
-        </div>
+<body style="background-color: hsl(0, 0%, 96%)">
+  <section class="hero has-background-info">
+    <div class="hero-body">
+      <div class="container">
+        <nav class="level">
+          <div class="level-left">
+            <figure class="image">
+              <img
+                src="whiteTransparent.png"
+                alt="virus logo"
+                style="width:75px; length:47.8125px; float:left"
+              />
+            </figure>
+            <h4 class="subtitle is-4 has-text-white">
+              EpTracker
+            </h4>
+          </div>
+        </nav>
       </div>
     </div>
-  </nav>
+  </section>
 
   <div class="section">
     <div class="container">
