--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -1,23 +1,22 @@
     <div>
       <section class="hero has-background-info is-medium">
         <div class="hero-body">
+          
           <div class="container">
-            <nav class="level">
-              <div class="level-left">
-                <figure class="image">
-                  <img src="whiteTransparent.png" alt="virus logo" style="width:75px; length:47.8125px; float:left"/>
-                </figure>
-                <h4 class="subtitle is-4 has-text-white">
-                  EpTracker
-                </h4>  
-              </div>
-              <div class="level-right">
-                <h1 class="title has-text-white">
-                  Questionnaire
-                </h1>
-              </div>
-            </nav>
-          </div>
+            <div class="columns is-centered">
+                <div class="column is-half">
+                    <div>
+                        <figure class="image">
+                          <img src="whiteTransparent.png" alt="virus logo" style="width:75px; length:47.8125px; float:left"/>
+                        </figure>
+                        <h1 class="subtitle is-1 has-text-white">
+                          EpTracker | <strong class="has-text-white">Questionnaire</strong>
+                        </h1>  
+                    </div>
+                </div>
+            </div>
+        </div>
+          
           <div class="container">
           <br>
             <p class="has-text-white has-text-centered">
