--- a/frontend/partials/addcontactsfrommap.html
+++ b/frontend/partials/addcontactsfrommap.html
@@ -1,4 +1,5 @@
 <head>
+  <base href="" />
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css"
     rel="stylesheet"
