--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -7,17 +7,16 @@
                 <div class="column is-half">
                     <div>
                         <figure class="image">
-                          <img src="whiteTransparent.png" alt="virus logo" style="width:75px; length:47.8125px; float:left"/>
+                          <img src="whiteTransparent.png" alt="virus logo" style="width:75px; float:left"/>
                         </figure>
-                        <h1 class="subtitle is-1 has-text-white">
+                        <h2 class="subtitle is-2 has-text-white">
                           EpTracker | <strong class="has-text-white">Questionnaire</strong>
-                        </h1>  
+                        </h2>  
                     </div>
                 </div>
             </div>
         </div>
           
-          <div class="container">
           <br>
           <div class="container">
             <p class="has-text-white has-text-centered">
