--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -29,9 +29,10 @@
     <br>
     <section>
       <div class="container  has-text-centered">
+
         <div class="notification box">
           <h6> 
-          Name?
+          {{accessingUser ?  accessingUser : 'Name?'}}
           </h6>
         </div>
       </div>
