--- a/frontend/partials/addcontactsfrommap.html
+++ b/frontend/partials/addcontactsfrommap.html
@@ -17,12 +17,13 @@
       <div class="columns">
         <div class="column is-two-thirds">
           <div class="box">
-            <h1 class="subtitle">Image of Location You Were At:</h1>
+            <h1 class="subtitle">Location You Were At: Dallas Love Field Airport</h1>
+            <h3 class="is-subtitle is3">Does you remember any additional contacts at this location?</h3>
           </div>
           <div class="box">
             <iframe
                 width="100%"
-                height="300"
+                height="375px"
                 frameborder="0" style="border:0"
                 src={{trustUrl(panoPath)}} allowfullscreen>
             </iframe>
@@ -36,19 +37,18 @@
             <div class="field">
               <label class="label">Name</label>
               <div class="control">
-                <input class="input" type="text" />
+                <input class="input" type="text" ng-model="contactName"/>
               </div>
             </div>
 
             <div class="field">
               <label class="label">Email</label>
               <div class="control">
-                <input class="input" type="email" />
+                <input class="input" type="email" ng-model="contactEmail"/>
               </div>
             </div>
 
-            <button class="button is-info">Submit</button>
-
+            <button class="button is-info" ng-click="update(contactEmail)">Submit</button>
         </div>
       </div>
     </div>
