--- a/frontend/partials/locationhistory.html
+++ b/frontend/partials/locationhistory.html
@@ -49,7 +49,12 @@
     </section>
     <section class="section">
       <div class="container">
-        <div class="box">
+        <div class="box" ng-hide="showMap">
+          <h2 class="subtitle is-2">
+            Redirecting to Dallas Love Field Airport...
+          </h2>
+        </div>
+        <div class="box" ng-hide="!showMap">
           <div id="mapid"></div>
         </div>
       </div>
