--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -31,13 +31,13 @@
       <div class="container  has-text-centered">
 
         <div class="notification box">
-          <h6> 
-          {{accessingUser ?  accessingUser : 'Name?'}}
+          <h5 class="subtitle is-5"> 
+          Welcome to your Personalized Questionnaire: {{accessingUser ?  accessingUser : 'Name?'}}
           </h6>
         </div>
       </div>
     </section>
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
           <div class="columns is-centered">
               <div class="column is-half">
@@ -62,17 +62,8 @@
       </div>
 
     </div>
-  </section>
+  </section> -->
 <br>
-<section>
-  <div class="container  has-text-centered">
-    <div class="notification box">
-      <h6> 
-      Name?
-      </h6>
-    </div>
-  </div>
-</section>
 <section class="section">
   <div class="container">
     <div class="columns"> 
