--- a/frontend/partials/dashboard.html
+++ b/frontend/partials/dashboard.html
@@ -34,7 +34,7 @@
 </head>
 <body style="background-color: hsl(0, 0%, 96%)">
   <section class="hero has-background-info">
-    <div class="hero-body">
+    <div class="hero-body" style="padding-top:24;padding-bottom:24;">
       <div class="container">
         <nav class="level">
           <div class="level-left">
