--- a/frontend/partials/patient.html
+++ b/frontend/partials/patient.html
@@ -41,7 +41,7 @@
 </head>
 <body style="background-color: hsl(0, 0%, 96%)">
   <section class="hero has-background-info">
-    <div class="hero-body">
+    <div class="hero-body" style="padding-top:24;padding-bottom:24;">
       <div class="container">
         <nav class="level">
           <div class="level-left">
@@ -61,7 +61,7 @@
     </div>
   </section>
 
-  <div class="section">
+  <div class="section" style="padding-top:24;">
     <div class="container">
       <div class="notification is-diagnosys-gradient">
         <strong>PATIENT 1385</strong>
@@ -144,9 +144,6 @@
                   <ul>
                     <li>
                       <a>Manage Patients</a>
-                    </li>
-                    <li>
-                      <a>Process Diagnosis</a>
                     </li>
                   </ul>
                 </li>
