--- a/frontend/partials/home.html
+++ b/frontend/partials/home.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section class="hero has-background-info">
-      <div class="hero-body">
+      <div class="hero-body" style="padding-top:24;padding-bottom:24;">
         <div class="container">
           <nav class="level">
             <div class="level-left">
