--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -1,7 +1,7 @@
     <div>
       <section class="hero has-background-info">
         <div class="hero-body">
-          
+
           <div class="container">
             <div class="columns is-centered">
                 <div class="column is-half">
@@ -11,16 +11,16 @@
                         </figure>
                         <h2 class="subtitle is-2 has-text-white">
                           EpTracker | <strong class="has-text-white">Questionnaire</strong>
-                        </h2>  
+                        </h2>
                     </div>
                 </div>
             </div>
         </div>
-          
+
           <br>
           <div class="container">
             <p class="has-text-white has-text-centered">
-            Welcome to the Coronavirus Questionnaire. Please answer these questions to help track the current spread and 
+            Welcome to the Coronavirus Questionnaire. Please answer these questions to help track the current spread and
             prevent further spread of the virus.
             </p>
           </div>
@@ -31,9 +31,9 @@
       <div class="container  has-text-centered">
 
         <div class="notification box">
-          <h5 class="subtitle is-5"> 
+          <h5 class="subtitle is-5">
           Welcome to your Personalized Questionnaire: {{accessingUser ?  accessingUser : 'Name?'}}
-          </h6>
+          </h5>
         </div>
       </div>
     </section>
@@ -47,7 +47,7 @@
                       </figure>
                       <h1 class="subtitle is-1 has-text-white">
                         EpTracker | <strong class="has-text-white">Questionnaire</strong>
-                      </h1>  
+                      </h1>
                   </div>
               </div>
           </div>
@@ -56,7 +56,7 @@
       <div class="container">
       <br><br><br>
         <p class="has-text-white has-text-centered is-size-5">
-        Welcome to <strong class="has-text-white">EpTracker's Coronavirus Questionnaire</strong>. Please answer these questions to help track the current spread of the virus and 
+        Welcome to <strong class="has-text-white">EpTracker's Coronavirus Questionnaire</strong>. Please answer these questions to help track the current spread of the virus and
         prevent it from spreading further.
         </p>
       </div>
@@ -66,8 +66,8 @@
 <br>
 <section class="section">
   <div class="container">
-    <div class="columns"> 
-      <div class="column"> 
+    <div class="columns">
+      <div class="column">
         <div class="field">
           <div class="control">
             <h7>Last Name</h7>
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="column"> 
+      <div class="column">
         <div class="field">
           <div class="control">
             <h7>First Name</h7>
@@ -89,11 +89,11 @@
       </div>
     </div>
   </div>
-</section> 
+</section>
 <section>
   <div class="container  has-text-centered">
     <div class="notification box">
-      <h6> 
+      <h6>
       Sex?
       </h6>
     </div>
@@ -101,7 +101,7 @@
 </section>
 <section>
 <div class="container  has-text-centered">
-  <div class="section">
+  <div class="section" style="padding-top:15;padding-bottom:12;">
     <label class="radio">
       <input type="radio" name="answer">
       Male
@@ -117,31 +117,31 @@
 <div class="container">
   <div class="notification box">
     <h6 class="has-text-centered">
-      Age? 
+      Age?
     </h6>
   </div>
 </div>
 </section>
 <section class="selection">
 <div class="container has-text-centered">
-  <div class="section">
+  <div class="section" style="padding-top:24;padding-bottom:12;">
     <form>
       <label for="days"></label>
       <input type="number" min="0" max="99" id="days" name="days" style="width: 3em; font-size: 18px;">
       Years
     </form>
   </div>
-</section> 
+</section>
 <section>
 <div class="container  has-text-centered">
   <div class="notification box">
-    <h6> 
-      Address? 
+    <h6>
+      Address?
       </h6>
   </div>
 </div>
 </section>
-<section class="section">
+<section class="section" style="padding-top:12;padding-bottom:12;">
 <div class="container">
   <div class="columns">
     <div class="column">
@@ -158,14 +158,14 @@
         <div class="control">
           <h7> City </h7>
           <input class="input" type="text" placeholder="e.g. St. Louis">
-          <br> 
+          <br>
         </div>
       </div>
     </div>
   </div>
 </div>
-</section> 
-<section class="section">
+</section>
+<section class="section" style="padding-top:12;">
 <div class="container">
   <div class="columns">
     <div class="column">
@@ -182,7 +182,7 @@
         <div class="control">
           <h7> Zip Code </h7>
           <input class="input" type="number" placeholder="e.g. 63031">
-          <br> 
+          <br>
         </div>
       </div>
     </div>
@@ -191,18 +191,18 @@
         <div class="control">
           <h7> Country </h7>
           <input class="input" type="text" placeholder="e.g. USA">
-          <br> 
+          <br>
         </div>
       </div>
     </div>
   </div>
 </div>
-</section> 
+</section>
 <section>
 <div class="container  has-text-centered">
   <div class="notification box">
-    <h6> 
-      Contact Information 
+    <h6>
+      Contact Information
     </h6>
   </div>
 </div>
@@ -224,20 +224,20 @@
         <div class="control">
           <h7> Email </h7>
           <input class="input" type="email" placeholder="e.g umsl@blank.org">
-          <br> 
+          <br>
         </div>
       </div>
     </div>
   </div>
 </div>
-</section> 
-<section class="section"> 
-<div class="buttons is-centered"> 
+</section>
+<section class="section">
+<div class="buttons is-centered">
   <div class="field is-grouped">
     <div class="control">
       <button class="button is-link" ng-click="nextPage('beenDiagnosed')">Continue</button>
     </div>
-    
+
   </div>
 </div>
 </section>
