--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -231,6 +231,32 @@
   </div>
 </div>
 </section>
+
+<section>
+<div class="container  has-text-centered">
+  <div class="notification box">
+    <h6>
+      Google Maps or iOS Location History JSON Import
+    </h6>
+  </div>
+</div>
+</section>
+<section class="section">
+<div class="container">
+  <div class="columns">
+    <div class="column">
+      <div class="field">
+        <div class="control">
+          <h7> File Upload </h7>
+          <input class="input" type="file">
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
 <section class="section">
 <div class="buttons is-centered">
   <div class="field is-grouped">
