--- a/frontend/partials/entercontacts.html
+++ b/frontend/partials/entercontacts.html
@@ -51,7 +51,7 @@
               <input
                 class="input"
                 type="email"
-                placeholder="e.g. berniesanders2020@gmail.com"
+                placeholder="e.g. johnsmith@gmail.com"
               />
               <br />
               <br />
