--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -32,7 +32,7 @@
 
         <div class="notification box">
           <h5 class="subtitle is-5"> 
-          {{accessingUser ?  'Welcome to your Personalized Questionnaire ' + accessingUser : 'Your Name?'}}
+          {{accessingUser ?  'Welcome to your Personalized Questionnaire: ' + accessingUser : 'Your Name?'}}
           </h6>
         </div>
       </div>
