--- a/frontend/partials/peopleContact.html
+++ b/frontend/partials/peopleContact.html
@@ -22,13 +22,22 @@
     <section class="hero has-background-info is-small">
         <div class="hero-body">
             <div class="container">
-                <h1 class="has-text-white title has-text-centered">
-                    People You Have Been In Contact With
-                </h1>
-            </div>
-            <div class="container">
-                <br>
-            </div>
+                <nav class="level">
+                  <div class="level-left">
+                    <figure class="image">
+                      <img src="whiteTransparent.png" alt="virus logo" style="width:75px; length:47.8125px; float:left"/>
+                    </figure>
+                    <h4 class="subtitle is-4 has-text-white">
+                      EpTracker
+                    </h4>  
+                  </div>
+                  <div class="level">
+                    <h1 class="title has-text-white">
+                      People Contacted
+                    </h1>
+                  </div>
+                </nav>
+              </div>
         </div>
     </section>
     <br>
