update people contacted
made the notifications notification boxes so that they pop off the screen more

--- a/frontend/partials/entercontacts.html
+++ b/frontend/partials/entercontacts.html
@@ -14,7 +14,7 @@
   <br />
   <section>
     <div class="container  has-text-centered">
-      <div class="notification">
+      <div class="notification box">
         <h6>
           People you have been in contact with during the incubation period.
         </h6>
