--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -20,7 +20,7 @@
           <br>
           <div class="container">
             <p class="has-text-white has-text-centered">
-            Welcome to Coronavirus Questionnaire. Please answer these questions to help track the current spread and
+            Welcome to the Coronavirus Questionnaire. Please answer these questions to help track the current spread and
             prevent further spread of the virus.
             </p>
           </div>
